Saved local changes

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
         <div class="app__dialog app__dialog--hide">
           <div class="app__dialog-content" style="text-align: center;">
             <h5>Item Details</h5><br/>
-            <img class="item_img" src="/images/lap.png"/>
+            <img class="item_img" src="/images/touch/lap.png"/>
             <input type="text" id="result">
             <input type="text" value="Serial No.: 802288199332">
             <input type="text" value="Item: Laptop ASUS X550L">
@@ -48,6 +48,7 @@
             <input type="text" value="Depreciation: 20%">
             <input type="text" value="Current Value: 40,000 LKR">
             <input type="text" value="Over Date: 2018/05/04">
+            <br/>
             <button type="button" class="app__dialog-open">More</button>
             <button type="button" class="app__dialog-close">Close</button>
           </div>
