--- a/app/index.html
+++ b/app/index.html
@@ -36,11 +36,11 @@
         <video autoplay></video>
         
         <!-- Dialog  -->
-        <div class="app__dialog app__dialog--hide">
-          <div class="app__dialog-content" style="text-align: center;">
-            <h5>Item Details</h5><br/>
-            <img class="item_img" src="/images/touch/lap.png"/>
-            <input type="text" id="result">
+        <div class="app__dialog app__dialog">
+          <div class="app__dialog-content" style="text-align: center;border: solid #ffae45 thick;">
+            <h5>Asset Information</h5><br/>
+            <img class="item_img" src="images/touch/lap.png"/>
+            <!--<input type="text" id="result">-->
             <input type="text" value="Serial No.: 802288199332">
             <input type="text" value="Item: Laptop ASUS X550L">
             <input type="text" value="Book Value: 200,000 LKR">
